--- a/UberEatsUser/amplify/backend/backend-config.json
+++ b/UberEatsUser/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "UberEats": {
+    "UberEatsProject": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -26,7 +26,7 @@
     }
   },
   "api": {
-    "UberEats": {
+    "UberEatsProject": {
       "service": "AppSync",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
